mysql 용 dockerfile 로 빌드하면 최초 컨테이너 생성시 mysql 의 초기 접속 정보가 초기화 되지 않던 현상 수정 (기존에 go 에서 mysql 을 실행하던 것을 bash 에서 실행하게끔 변경)

--- a/mysql/Dockerfile-mysql57
+++ b/mysql/Dockerfile-mysql57
@@ -57,7 +57,7 @@ RUN apt-get install -y lsb-release gnupg
 WORKDIR /root
 RUN wget https://dev.mysql.com/get/mysql-apt-config_0.8.12-1_all.deb
 RUN (echo 7 ; echo 1 ; echo 1 ; echo 4) | dpkg -i mysql-apt-config_0.8.12-1_all.deb
-RUN apt-get update
+RUN apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 467B942D3A79BD29 && apt-get update
 RUN apt-cache policy mysql-server
 RUN DEBIAN_FRONTEND=noninteractive apt install -y -f mysql-client=5.7* mysql-community-server=5.7* mysql-server=5.7*
 RUN sed -i'' -r -e "s/127.0.0.1/0.0.0.0/" /etc/mysql/mysql.conf.d/mysqld.cnf
